src/dialog/snapshots/tvision__dialog__msgbox__tests__snapshot_confirm_yes_no_cancel.snap
---
source: src/dialog/msgbox.rs
expression: "render_dialog(&mut d, 40, 9)"
---
size: 40x9
cursor: hidden
text:
|┌────────────── Confirm ───────────────┐|
|│                                      │|
|│  Are you sure?                       │|
|│                                      │|
|│                                      │|
|│                                      │|
|│     Yes   ▄      No   ▄    Cancel ▄  │|
|│    ▀▀▀▀▀▀▀▀    ▀▀▀▀▀▀▀▀    ▀▀▀▀▀▀▀▀  │|
|└──────────────────────────────────────┘|
attr:
|aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa|
|aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa|
|aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa|
|aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa|
|aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa|
|aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa|
|aaaabbcbbbbbaaaabbbcbbbbaaaabcbbbbbbaaaa|
|aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa|
|aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa|
legend:
  . default
  a fg=RGB(0,0,0) bg=RGB(170,170,170)
  b fg=RGB(0,0,0) bg=RGB(0,170,0)
  c fg=RGB(255,255,85) bg=RGB(0,170,0)
