src/dialog/snapshots/tvision__dialog__msgbox__tests__snapshot_error_ok.snap
---
source: src/dialog/msgbox.rs
expression: "render_dialog(&mut d, 40, 9)"
---
size: 40x9
cursor: hidden
text:
|┌─────────────── Error ────────────────┐|
|│                                      │|
|│  An error occurred.                  │|
|│                                      │|
|│                                      │|
|│                                      │|
|│                  OK   ▄              │|
|│                ▀▀▀▀▀▀▀▀              │|
|└──────────────────────────────────────┘|
attr:
|aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa|
|aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa|
|aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa|
|aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa|
|aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa|
|aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa|
|aaaaaaaaaaaaaaaabbbbcbbbaaaaaaaaaaaaaaaa|
|aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa|
|aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa|
legend:
  . default
  a fg=RGB(0,0,0) bg=RGB(170,170,170)
  b fg=RGB(0,0,0) bg=RGB(0,170,0)
  c fg=RGB(255,255,85) bg=RGB(0,170,0)
