src/dialog/snapshots/tvision__dialog__msgbox__tests__snapshot_input_box.snap
---
source: src/dialog/msgbox.rs
expression: "render_dialog(&mut d, 60, 8)"
---
size: 60x8
cursor: hidden
text:
|┌───────────────────────── Title ──────────────────────────┐|
|│                                                          │|
|│  Name                                                    │|
|│                                                          │|
|│                                       OK   ▄    Cancel ▄ │|
|│                                     ▀▀▀▀▀▀▀▀    ▀▀▀▀▀▀▀▀ │|
|│                                                          │|
|└──────────────────────────────────────────────────────────┘|
attr:
|aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa|
|aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa|
|aaaaaaaabbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbaaa|
|aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa|
|aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaccccdcccaaaacdccccccaaa|
|aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa|
|aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa|
|aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa|
legend:
  . default
  a fg=BIOS(0) bg=BIOS(7)
  b fg=BIOS(15) bg=BIOS(1)
  c fg=BIOS(0) bg=BIOS(2)
  d fg=BIOS(14) bg=BIOS(2)
